added the api to generat token
